- Fixed a possible crash of unknown origin if the fleet panel injector can't find the fleet panel buttons.
- Fixed an issue where a skill that depended on a target's shield efficiency wasn't taking into account its shield damage taken stat.

2.0.2
----------
- Hotfix for issue introduced in 2.0.1 that would cause some interaction dialogs to show the wrong visual.

2.0.1
----------
- Removed extraneous mastery-adder listener invocation.
- Fixed issue with obfuscated FleetMember.getHullSpec call causing crashes on non-Windows systems.
- Fixed issue where some fleets (those without inflaters) would not show their S-mods added by this mod in the fleet preview.
- Added error message if AI Core interface plugin doesn't implement the correct Java interface.

2.0.0
----------

*** NOT SAVE COMPATIBLE WITH PREVIOUS VERSIONS ***

- Added mastery "unlocks," universal features that can be accessed by reaching a certain mastery level.
    - Added "Selective Restoration" that allows removal of specific d-mods, costing between 20%-100% of a standard restoration depending on number of d-mods removed.
    - Removed "Clear S-mods", added "Hull Reversion" feature that allows removal of specific S-mods, however this feature costs money now.
    - Added "AI Core Integration" feature that allows integrating a AI core (including Pseudocores) into a ship to gain a small bonus depending on the type of core used.
    - Removed "Create Construct", added "Knowledge Forge" that reduces MP gained and passively generates "blank" constructs that can be used on any ship class.
    - Ship-specific features can have their cost reduced by 90% by spending a story point.
- Removed skill changes.
- Reduced maximum mastery level to 7, removed the 3rd S-mod slot (along with the +30% mastery boost other option).
- No longer sets Misc.MAX_PERMA_MODS (equiv. "maxPermanentHullmods" in settings) to 0.
    - Mastery handler hullmod now reduces build-in limit by MAX_PERMA_MODS.